# karaokespectrum-wave-audioplayer-OK-hi-res-

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  audioanalyzer.cpp  audioanalyzer.h  karaokewidget.cpp  karaokewidget.h  lrcparser.cpp  lrcparser.h  lyricscontroller.cpp  lyricscontroller.h  mainwindow.cpp  mainwindow.h  res.qrc  spectrumwidget.cpp  spectrumwidget.h
